--- a/src/Autodash.Core/UI/Views/CreateProject.cshtml
+++ b/src/Autodash.Core/UI/Views/CreateProject.cshtml
@@ -7,11 +7,8 @@
 
 <form method="post" enctype="application/x-www-form-urlencoded" action="/projects/create">
 
-    @foreach (var error in Model.Errors)
-    {
-
-    } 
-
+    @Html.Partial("_ValidationSummary", Model.Errors)
+    
     <div class="form-group">
         <label for="ProjectName">Project Name</label>
         <input type="text" class="form-control" name="ProjectName" required maxlength="100" />
