--- a/src/Autodash.Core/UI/Views/CreateSuite.cshtml
+++ b/src/Autodash.Core/UI/Views/CreateSuite.cshtml
@@ -15,15 +15,45 @@
         <label for="SuiteName">Suite Name</label>
         <input type="text" class="form-control" name="SuiteName" value="@Model.SuiteName" required maxlength="100" />
     </div>
-
-    <div class="form-group">
-        <label for="Browsers">Browsers</label>
-        <div class="checkbox">
-            <label><input type="checkbox" name="Browsers" value="Chrome" />Chrome</label>&nbsp;
-            <label><input type="checkbox" name="Browsers" value="Firefox" />Firefox</label>&nbsp;
-            <label><input type="checkbox" name="Browsers" value="Internet Explorer" />IE</label>
+    
+    <fieldset>
+        <legend>Configuration</legend>
+        <div class="form-group">
+            <label for="Browsers">Browsers</label>
+            <div class="checkbox">
+                <label><input type="checkbox" name="Browsers" value="Chrome" />Chrome</label>&nbsp;
+                <label><input type="checkbox" name="Browsers" value="Firefox" />Firefox</label>&nbsp;
+                <label><input type="checkbox" name="Browsers" value="Internet Explorer" />IE</label>
+            </div>
         </div>
-    </div>
+        
+        <div class="form-group">
+            <label for="RetryAttempts">Retry attempts</label>
+            <input type="text" class="form-control" name="RetryAttempts" value="@Model.RetryAttempts" required number maxlength="1" />
+        </div>
+        
+        <div class="form-group">
+            <label for="RetryAttempts">Test Timeout</label>
+            <input type="text" class="form-control" name="TestTimeout" value="@Model.TestTimeoutMinutes" required pattern="^\d\d?:\d\d$" />
+        </div>
+    </fieldset>
+
+    <fieldset>
+        <legend>Schedule (optional)</legend>
+
+        <div class="form-group">
+            <label for="Time">Run at</label>
+            <input type="text" class="form-control" name="Time" value="@Model.Time" required pattern="^\d\d?:\d\d$" placeholder="Ex: 14:00" />
+        </div>
+
+        <div class="form-group">
+            <label for="Interval">Every</label>
+            <div class="input-group">
+                <input type="text" class="form-control" name="Interval" value="@Model.IntervalHours" placeholder="Ex: 24" />
+                <div class="input-group-addon">hours</div>
+            </div>
+        </div>
+    </fieldset>
 
     <div class="form-group">
         <label for="TestAssemblies">Browsers</label>
