--- a/src/Autodash.Core/UI/Views/CreateSuite.cshtml
+++ b/src/Autodash.Core/UI/Views/CreateSuite.cshtml
@@ -17,7 +17,7 @@
     </div>
 
     <div class="form-group">
-        <label for="TestAssembliesZip">Suite Name</label>
+        <label for="TestAssembliesZip">Test Assemblies</label>
         <input type="file" class="form-control" name="TestAssembliesZip" required />
     </div>
     
@@ -62,7 +62,6 @@
             </div>
         </div>
     </fieldset>
-
 
     <button type="submit" class="btn btn-success">Submit</button>
 </form>
