--- a/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
+++ b/src/Autodash.Core/UI/Views/SuiteDetails.cshtml
@@ -6,14 +6,15 @@
 
 <div class="row">
     <div class="col-md-6">
-        <h1>Suite Details</h1>
+        <h1>@Model.Suite.Name</h1>
+        <button class="btn btn-default" id="js-run-suite">Run Suite</button>
     </div>
     <div class="col-md-6">
-        <div id="last-ten-chart" class="mt10" style="height:130px"></div>
+        <div id="last-ten-chart" class="mt10 pull-right" style="height:130px;width:278px"></div>
     </div>
 </div>
 
-<div role="tabpanel">
+<div role="tabpanel" class="mt10">
 
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" id="content-tabs">
@@ -86,7 +87,7 @@
                 <thead>
                     <tr>
                         <th>Date</th>
-                        <th>Duration</th>
+                        <th>Duration (mins)</th>
                         <th>Status</th>
                         <th>Passed / Failed</th>
                         <th>Reports</th>
@@ -95,10 +96,10 @@
                 <tbody>
                     @foreach (var run in Model.SuiteRuns)
                     {
-                        <tr class="@(run.Result.Passed ? "bg-success" : "bg-danger")">
+                        <tr>
                             <td>@run.ScheduledFor</td>
                             <td>@run.DurationFriendly()</td>
-                            <td>@run.Status.ToString()</td>
+                            <td>@Html.Raw(run.StatusColored())</td>
                             <td>@run.PassedFailed()</td>
                             <td><a href="#">HTML</a> | <a href="#">Excel</a></td>
                         </tr>
