--- a/src/Autodash.Core/UI/Views/_TestExplorer.cshtml
+++ b/src/Autodash.Core/UI/Views/_TestExplorer.cshtml
@@ -5,13 +5,13 @@
 
 <div id="test-explorer-container">
     <div class="form-inline">
-        <label>Test Tags Query:</label> <input type="text" class="form-control" data-bind="value: query" />
+        <label>Test Tags Query:</label> <input type="text" class="form-control" placeholder="Ex: P1 && (US || UK)" style="width: 300px" data-bind="value: query" />
         <button class="btn btn-primary" data-bind="click: submitQuery">See Results</button>
         <span class="text-danger" data-bind="text: error"></span>
     </div>
     <div data-bind="foreach: unitTestCollections">
         <h4><span data-bind="text: assemblyName"></span> <small data-bind="text: testRunnerName"></small></h4>
-        <table class="table table-condensed">
+        <table class="table table-condensed test-explorer-table">
             <thead>
                 <tr>
                     <th>Test Name</th>
@@ -20,8 +20,8 @@
             </thead>
             <tbody data-bind="foreach: tests">
                 <tr>
-                    <td data-bind="text: testName"></td>
-                    <td data-bind="text: $root.formatTestTags(testTags)"></td>
+                    <td class="test-name" data-bind="text: testName"></td>
+                    <td class="test-tags" data-bind="text: $root.formatTestTags(testTags)"></td>
                 </tr>
             </tbody>
         </table>
